@@ -2,7 +2,7 @@ use 5.006;
 use ExtUtils::MakeMaker;
 WriteMakefile(
                 NAME         => 'Number::Phone',
-                VERSION      => 1.6,
+                VERSION_FROM => 'lib/Number/Phone.pm',
                 PREREQ_PM    => {
                         'Scalar::Util'  => 0,
                         'Test::More'    => 0,
