@@ -1,3 +1,8 @@
+XXXX-XX-XX      1.7     Fix formatting for valid but unallocated UK numbers;
+			One of the UK telcos whose name we check for in
+			  tests renamed itself;
+                        New UK allocations;
+
 2008-05-27      1.6     Magic country detection now works (thanks to
                           Jos Boumans for reporting the bug);
                         New UK allocations
